--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Dark Blue Site</title>
+  <title>Mashy's Game Base</title>
   <style>
     body {
       margin: 0;
@@ -75,7 +75,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Site</h1>
+    <h1>Mashy's Game Base</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
@@ -86,7 +86,7 @@
   <main>
     <section id="about">
       <h2>About Me</h2>
-      <p>I'm a developer who enjoys creating clean and dark-themed web experiences.</p>
+      <p>A Unity Game Developer who enjoys playing and creating games</p>
     </section>
 
     <section id="projects">
@@ -95,17 +95,17 @@
         <li><strong>Cool App</strong> - A cool project I built with JavaScript and HTML.</li>
         <li><strong>Dark Blog</strong> - A blog site with a dark theme, deployed on GitHub Pages.</li>
       </ul>
-      <a class="button" href="https://github.com/yourusername" target="_blank">View GitHub</a>
+      <a class="button" href="https://github.com/Mashyyyy" target="_blank">View GitHub</a>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>You can reach me on <a href="https://twitter.com" target="_blank">Twitter</a> or via email at your@email.com.</p>
+      <p>You can reach me on <a href="https://x.com/zenixcmarsh" target="_blank">Twitter</a> or via email at calbay.jullian@gmail.com.</p>
     </section>
   </main>
 
   <footer>
-    © 2025 Your Name. All rights reserved.
+    © 2025 Jullian Eliezer Calbay. All rights reserved.
   </footer>
 </body>
 </html>
