--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Home - Dark Blue Site</title>
+  <title>About Me</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Welcome to My Site</h1>
+    <h1>About Me</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -17,8 +17,7 @@
   </header>
   <main>
     <section>
-      <h2>Hello there!</h2>
-      <p>This is my GitHub Pages site with a sleek dark blue theme.</p>
+      <p>I’m a developer passionate about dark UI themes, web projects, and open source work.</p>
     </section>
   </main>
   <footer>© 2025 Your Name</footer>
