--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Home - Dark Blue Site</title>
+  <title>Contact</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Welcome to My Site</h1>
+    <h1>Contact</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -17,8 +17,8 @@
   </header>
   <main>
     <section>
-      <h2>Hello there!</h2>
-      <p>This is my GitHub Pages site with a sleek dark blue theme.</p>
+      <p>Email me at: <strong>your@email.com</strong></p>
+      <p>Or reach me via <a href="https://twitter.com" target="_blank">Twitter</a>.</p>
     </section>
   </main>
   <footer>© 2025 Your Name</footer>
