--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       <p>This is my GitHub Pages site with a sleek dark blue theme.</p>
     </section>
   </main>
-  <footer>© 2025 Your Name</footer>
+  <footer>© 2025 Jullian Eliezer Calbay</footer>
 </body>
 </html>
