--- a/about.html
+++ b/about.html
@@ -20,6 +20,6 @@
       <p>I’m a developer passionate about dark UI themes, web projects, and open source work.</p>
     </section>
   </main>
-  <footer>© 2025 Your Name</footer>
+  <footer>© 2025 Jullian Eliezer Calbay</footer>
 </body>
 </html>
