--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       </div>
     </section>
   </main>
-  <footer>© 2025 Your Name</footer>
+  <footer>© 2025 Jullian Eliezer Calbay</footer>
 
   <script>
     const form = document.getElementById('contactForm');
