--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
       </div>
     </section>
   </main>
-  <footer>© 2025 Your Name</footer>
+  <footer>© 2025 Jullian Eliezer Calbay</footer>
 
   <script>
     const images = document.querySelectorAll(".carousel img");
