--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   </header>
   <main>
     <section>
-      <form id="contactForm" action="https://formsubmit.co/8e53f6b9cc2b72e8de9a59cff0ac08c1" method="POST" class="contact-form">
+      <form id="contactForm" action="https://formsubmit.co/calbay.jullian@gmail.com" method="POST" class="contact-form">
         <!-- Prevent spam -->
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_next" value="https://yourusername.github.io/thankyou.html">
