--- a/projects.html
+++ b/projects.html
@@ -19,9 +19,9 @@
     <section>
       <h2>Image Carousel</h2>
       <div class="carousel">
-        <img src="https://via.placeholder.com/600x300/1B263B/FFFFFF?text=Project+1" class="active" />
-        <img src="https://via.placeholder.com/600x300/415A77/FFFFFF?text=Project+2" />
-        <img src="https://via.placeholder.com/600x300/778DA9/FFFFFF?text=Project+3" />
+        <img src="resources/screenshot_01.png" class="active" />
+        <img src="resources/screenshot_02.png" />
+        <img src="resources/screenshot_03.png" />
       </div>
       <div class="carousel-buttons">
         <button onclick="changeSlide(-1)">&#8592; Prev</button>
