--- a/projects.html
+++ b/projects.html
@@ -23,21 +23,23 @@
   </header>
 
   <main>
-    <section id="image-carousel" class="splide" aria-label="Project Screenshots">
-      <div class="splide__track">
-        <ul class="splide__list">
-          <li class="splide__slide">
-            <img src="resources/screenshot_01.png" alt="Screenshot 1" />
-          </li>
-          <li class="splide__slide">
-            <img src="resources/screenshot_02.png" alt="Screenshot 2" />
-          </li>
-          <li class="splide__slide">
-            <img src="resources/screenshot_03.png" alt="Screenshot 3" />
-          </li>
-        </ul>
-      </div>
-    </section>
+    <div class="carousel-container">
+      <section id="image-carousel" class="splide" aria-label="Project Screenshots">
+        <div class="splide__track">
+          <ul class="splide__list">
+            <li class="splide__slide">
+              <img src="resources/screenshot_01.png" alt="Screenshot 1" />
+            </li>
+            <li class="splide__slide">
+              <img src="resources/screenshot_02.png" alt="Screenshot 2" />
+            </li>
+            <li class="splide__slide">
+              <img src="resources/screenshot_03.png" alt="Screenshot 3" />
+            </li>
+          </ul>
+        </div>
+      </section>
+    </div>
   </main>
 
   <footer>© 2025 Jullian Eliezer Calbay</footer>
